2009-11-18  Jeffrey Stedfast  <fejj@novell.com>

	* uri.cpp (Combine): Use different combining rules for 1.0 apps
	(if the relative_path starts with a '/', always replace the path
	rather than combining).

2009-11-18  Alan McGovern  <amcgovern@novell.com>

	* grid.cpp: Remove a bunch of code from Grid::ArrangeOverride
	  which isn't required anymore.

2009-11-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaelement.cpp: Fix compiler warning.

2009-11-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline-ui.cpp|h: Distinguish between user initiated download
	requests and automatic download requests - if the user asked us to
	download the codecs, show the ui even if the user previously selected
	to not be asked about codec downloads again.

	* mediaelement.cpp: When requesting a codec download, indicate that the
	user did not initiate this request, it's an automatic request.

2009-11-18  Chris Toshok  <toshok@ximian.com>

	* dependencyobject.h (class EventObject): we need to make
	AddHandler virtual so UIElement can override it and do special
	things when Loaded is poked.

	* uielement.h,cpp: optimize the Loaded tree walking code, reducing
	the number of nodes we visit by 2-3 orders of magnitude.

	* list.h,cpp (List::Prepend): add an override that allows you to
	prepend an entire list onto the front of another one.  used in the
	Loaded tree walking code.

2009-11-18  Larry Ewing  <lewing@novell.com>

	* media.cpp:
	* mediaelement.cpp: fix mediaelement rendering to match image and
	clean up the code in both a little bit.

2009-11-18  Larry Ewing  <lewing@novell.com>

	* shape.cpp (MeasureOverride): fix a bug that slipped in due to
	the previous shape changes.

	Fixes 653 and some unit tests.

2009-11-18  Jeffrey Stedfast  <fejj@novell.com>

	* mediaelement.cpp (Pause): Seems that playlist can actually be
	null here when the downloader fails, so properly handle null
	situations instead of asserting.

2009-11-18  Jeffrey Stedfast  <fejj@novell.com>
