@@ -1,5 +1,13 @@
 2009-11-18  Alan McGovern  <amcgovern@novell.com>
 
+	* System.Windows.Controls/GridTestAuto.cs: We need to store
+	  the sizes of all the grid segments immediately after we
+	  finish measuring them. These sizes are used as our base
+	  values when deciding if we should expand star rows/cols. The
+	  rules for expanding star rows/cols now make sense :)
+
+2009-11-18  Alan McGovern  <amcgovern@novell.com>
+
 	* System.Windows.Controls/PanelTest.cs: Remove the
 	  MoonlightBug from a test which passes now
 
